# cpp-metaprogramming

./: .gitignore
hw1/: AlertDialogFormBuilder.cpp  AlertDialogFormBuilder.h  AndroidDialogFormImpl.cpp  AndroidDialogFormImpl.h  CMakeLists.txt  DialogForm.cpp  DialogForm.h  DialogFormBuilder.cpp  DialogFormBuilder.h  DialogFormImpl.cpp  DialogFormImpl.h  Director.cpp  Director.h  HarmonyOSDialogFormImpl.cpp  HarmonyOSDialogFormImpl.h  IOSDialogFormImpl.cpp  IOSDialogFormImpl.h  NavbarDialogFormBuilder.cpp  NavbarDialogFormBuilder.h  OverscreenDialogFormBuilder.cpp  OverscreenDialogFormBuilder.h  README.md  StyleSheetDefinition.h  main.cpp
hw1.bonus/: CMakeLists.txt  main.cpp
hw2/: CMakeLists.txt  README.md  conversion.h  factory.h  factory_utils.h  hierarchy.h  main.cpp  product.h  typelist.h
hw2.bonus/: CMakeLists.txt  Dispatcher.h  main.cpp
hw3/: CMakeLists.txt  README.md  main.cpp
hw3/Classes/: Classes.h
hw3/MetaGraphLib/AdjacencyListGraph/: AdjacencyListGraph.h  AdjacencyListGraphEdges.h
hw3/MetaGraphLib/AdjacencyMatrixGraph/: AdjacencyMatrixGraph.h  AdjacencyMatrixGraphEdges.h
hw3/MetaGraphLib/common/: AbsentEdge.h  MetaGraphVertices.h
hw3/MetaGraphLib/common/TypeList/: TypeList.h
